--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,43 @@
-# Godot 4+ specific ignores
-.godot/
-/android/
+# Godot auto-generated folders
+.import/
+.export/
+export_presets.cfg
+
+# Ignore web export folder
+exports/web/
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# User-specific editor configs
+*.cfg
+*.tres
+*.tscn~  # backup scenes
+
+# Godot cache / backup files
+*.godot
+*.tmp
+*.swp
+*.undo
+
+# Build folders
+bin/
+build/
+debug/
+release/
+
+# Node.js
+node_modules/
+package-lock.json
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+
+# Misc
+*.zip
+*.rar
